# mbed-os-spi-testing

./: .gitignore  .gitmodules  .mbed  .mbedignore  CMakeLists.txt  README.md  main.cpp  mbed_app.json
